module-4/module8_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
     app: httpserver
  name: nginx-httpsvc
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: httpserver
